# ahk-wayland

./: .gitignore  Cargo.toml  Project goal.txt  README.md  Shell.nix  build.rs  flake.nix  install-kwin-plugin.sh  restart_xremap.sh  shell.nix  verify-kde-plugin.sh
src/: action.rs  action_dispatcher.rs  action_dispatcher.rs.backup  action_dispatcher.rs.orig  event_handler.rs  event_handler.rs.orig  hotstring.rs  hotstring.rs.1040  lib.rs  main.rs
src/ahk/: interpreter.rs  mod.rs  mod.rs.OLD  parser.rs  parser.rs.OLD  parser.rs.backup  parser.rs.temp  send_parser.rs  transpiler.rs  types.rs  wayland_inject.rs
src/client/: kde_client.rs  mod.rs
src/client/kdeactiveeventlistener/: CMakeLists.txt  activeclienteffect.cpp  activeclienteffect.h  default.nix  main.cpp  main_debug.cpp  metadata.json  shell.nix
src/config/: keymap_action.rs  mod.rs  mod.rs.patch  mod.rs.rej
